fixed spacing on card

--- a/src/components/MyListings/MyListings.css
+++ b/src/components/MyListings/MyListings.css
@@ -16,9 +16,9 @@ h3{
     margin: 0;
 }
 
-.indPost{
+#indPost{
     display: inline-block;
-    width: 400px;
+    width: 350px;
     height: 600px;
     margin-top: 5px;
     border: solid 1px black;
@@ -43,6 +43,7 @@ h3{
     font-family: 'Poiret One', cursive;
     font-size: 18px;
     font-weight: bold;
+    margin-left: 10px;
 
 }
 
